--- a/index.html
+++ b/index.html
@@ -2,38 +2,67 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shailesh Singh | Cancer Researcher</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Shailesh Singh | Cancer Biologist</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <div class="container">
-    <h1>Shailesh Singh</h1>
-    <p class="tagline">Cancer Researcher | Molecular Diagnostics | Tumor Immunology</p>
-    
-    <section>
-      <h2>About Me</h2>
-      <p>I am a cancer researcher with expertise in breast cancer biology, molecular diagnostics, and immunology. My work focuses on tumor–immune interactions and diagnostic innovations using RNA-seq, FACS, and biosensors.</p>
-    </section>
-
-    <section>
-      <h2>Research Projects</h2>
-      <ul>
-        <li><strong>DLL1–Notch Signaling:</strong> Investigating its role in TAM polarization in breast cancer models.</li>
-        <li><strong>TNBC Profiling:</strong> Molecular analysis of triple-negative breast cancer using bulk RNA-seq and flow cytometry.</li>
-        <li><strong>Diagnostic Biosensors:</strong> Developing microRNA- and protein-based biosensor tools for cancer detection.</li>
+  <header>
+    <img src="banner.jpg" alt="Banner" class="banner">
+    <nav>
+      <ul class="navbar">
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#publications">Publications</a></li>
+        <li><a href="#research">Research Activity</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#youtube">YouTube</a></li>
+        <li><a href="#contact">Contact Me</a></li>
       </ul>
-    </section>
+    </nav>
+  </header>
 
-    <section>
-      <h2>CV</h2>
-      <p><a href="CV.pdf" target="_blank">Download My CV</a></p>
-    </section>
+  <section id="about">
+    <div class="about-container">
+      <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+      <div class="bio">
+        <h2>About Me</h2>
+        <p>I am a cancer biologist with a strong interest in deciphering the molecular and cellular mechanisms that drive cancer progression, therapy resistance, and tumor–immune interactions. My current research emphasizes racial disparities in cancer and investigates critical signaling pathways, including Notch and the PPARγ–ELF3 axis.</p>
+        <p>I earned my PhD in Zoology from the prestigious Banaras Hindu University (BHU), India, where I developed a solid foundation in computational biology and insect ecology...</p>
+      </div>
+    </div>
+  </section>
 
-    <section>
-      <h2>Contact</h2>
-      <p>Email: sshailesh165@gmail.com</p>
-    </section>
-  </div>
+  <section id="publications">
+    <h2>Publications</h2>
+    <p>Under construction...</p>
+  </section>
+
+  <section id="research">
+    <h2>Research Activity</h2>
+    <p>Under construction...</p>
+  </section>
+
+  <section id="services">
+    <h2>Services</h2>
+    <ul>
+      <li>Single cell RNA-seq analysis</li>
+      <li>Bulk RNA-seq analysis</li>
+    </ul>
+  </section>
+
+  <section id="youtube">
+    <h2>YouTube</h2>
+    <p>Coming soon...</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: sshailesh165@gmail.com</p>
+    <p>Alternate: shailesh.singh1@bhu.ac.in</p>
+  </section>
+
+  <footer>
+    <p>© Shailesh Singh | 2025</p>
+  </footer>
 </body>
 </html>
