--- a/index.html
+++ b/index.html
@@ -10,27 +10,11 @@
       font-family: Arial, sans-serif;
       background-color: #f5f5f5;
     }
-    header {
-      background-image: url('banner.jpg');
-      background-size: cover;
-      background-position: center;
-      height: 150px;
-      color: yellow;
-      display: flex;
-      align-items: flex-end;
-      justify-content: center;
-      position: relative;
-    }
-    header h1 {
-      font-size: 2rem;
-      text-shadow: 2px 2px 5px #000;
-      margin-bottom: 10px;
-    }
     nav {
-      background-color: rgba(0, 0, 0, 0.7);
-      position: absolute;
-      bottom: 0;
-      width: 100%;
+      background-color: #222;
+      position: sticky;
+      top: 0;
+      z-index: 10;
     }
     nav ul {
       list-style: none;
@@ -50,6 +34,21 @@
     }
     nav a:hover {
       background-color: #575757;
+    }
+    header {
+      background-image: url('banner.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 300px;
+      color: yellow;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+    }
+    header h1 {
+      font-size: 2rem;
+      text-shadow: 2px 2px 5px #000;
+      margin-bottom: 10px;
     }
     .tab {
       display: none;
@@ -86,18 +85,19 @@
   </script>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="#" onclick="showTab('about')">About Me</a></li>
+      <li><a href="#" onclick="showTab('publications')">Publications</a></li>
+      <li><a href="#" onclick="showTab('research')">Research Activity</a></li>
+      <li><a href="#" onclick="showTab('services')">Services</a></li>
+      <li><a href="#" onclick="showTab('youtube')">YouTube</a></li>
+      <li><a href="#" onclick="showTab('contact')">Contact Me</a></li>
+    </ul>
+  </nav>
+
   <header>
     <h1>Shailesh Singh, PhD</h1>
-    <nav>
-      <ul>
-        <li><a href="#" onclick="showTab('about')">About Me</a></li>
-        <li><a href="#" onclick="showTab('publications')">Publications</a></li>
-        <li><a href="#" onclick="showTab('research')">Research Activity</a></li>
-        <li><a href="#" onclick="showTab('services')">Services</a></li>
-        <li><a href="#" onclick="showTab('youtube')">YouTube</a></li>
-        <li><a href="#" onclick="showTab('contact')">Contact Me</a></li>
-      </ul>
-    </nav>
   </header>
 
   <div class="tab" id="about">
