--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!-- Updated on July 16 -->
 <!DOCTYPE html>
-<!-- trigger build -->
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -49,13 +48,12 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-end;
-      position: relative;
       text-align: center;
     }
     header h1 {
       font-size: 2rem;
       text-shadow: 2px 2px 5px #000;
-      margin-bottom: 20px;
+      margin-bottom: 40px;
     }
     .tab {
       display: none;
@@ -110,26 +108,7 @@
       selected.classList.add('active-tab');
       selected.scrollIntoView({ behavior: 'smooth' });
     }
-    window.onload = () => {
-  document.querySelectorAll('.tab').forEach(tab => {
-    tab.style.display = 'none';
-  });
-  const defaultTab = document.getElementById('about');
-  defaultTab.classList.add('active-tab');
-  defaultTab.style.display = 'block';
-};
-
-function showTab(tabId) {
-  const tabs = document.querySelectorAll('.tab');
-  tabs.forEach(tab => {
-    tab.classList.remove('active-tab');
-    tab.style.display = 'none';
-  });
-  const selected = document.getElementById(tabId);
-  selected.classList.add('active-tab');
-  selected.style.display = 'block';
-  selected.scrollIntoView({ behavior: 'smooth' });
-}
+    window.onload = () => showTab('about');
   </script>
 </head>
 <body>
@@ -144,7 +123,7 @@ function showTab(tabId) {
     </ul>
   </nav>
 
-  <header id="home">
+  <header>
     <h1>Shailesh Singh, PhD</h1>
   </header>
 
@@ -159,15 +138,65 @@ function showTab(tabId) {
           Sylvester Comprehensive Cancer Center<br>
           University of Miami Miller School of Medicine</p>
         </div>
-        <a href="cv.pdf" download class="cv-button">Download CV</a>
+        <a href="cv.pdf" download class="cv-button" target="_blank">Download CV</a>
       </div>
       <div class="bio">
         <h2>About Me</h2>
-        <p>I am a cancer biologist with a strong interest in deciphering the molecular and cellular mechanisms that drive cancer progression, therapy resistance, and tumor–immune interactions. My current research emphasizes racial disparities in cancer and investigates critical signaling pathways, including Notch and the PPARγ–ELF3 axis. I earned my PhD in Zoology from the prestigious Banaras Hindu University (BHU), India, where I developed a solid foundation in computational biology and insect ecology. During my doctoral research, I discovered a novel autosomal recessive eye color mutant—termed the golden brown eye mutant—in Zeugodacus cucurbitae, adding to the understanding of genetic regulation in insect models. Following my PhD, I completed a postdoctoral fellowship at the University of Miami, Sylvester Comprehensive Cancer Center, where I expanded my expertise in cancer biology, immuno-oncology, and bioinformatics. My technical competencies include single-cell and bulk RNA sequencing and analysis, flow cytometry, mammalian cell culture, in vivo mouse models, and patient-derived tumor models. I am proficient in computational workflows, differential gene expression analysis, and trajectory inference. I actively contribute to collaborative projects involving data analysis, figure generation, and manuscript development. Outside the lab, I am passionate about science communication, staying current with advances in cancer research and immunology, and mentoring early-career researchers in both experimental and computational aspects of biomedical science.</p>
+        <p>I am a cancer biologist with a strong interest in deciphering the molecular and cellular mechanisms that drive cancer progression, therapy resistance, and tumor–immune interactions. My current research emphasizes racial disparities in cancer and investigates critical signaling pathways, including Notch and the PPARγ–ELF3 axis.</p>
+        <p>I earned my PhD in Zoology from the prestigious Banaras Hindu University (BHU), India, where I developed a solid foundation in computational biology and insect ecology. During my doctoral research, I discovered a novel autosomal recessive eye color mutant—termed the golden brown eye mutant—in Zeugodacus cucurbitae, adding to the understanding of genetic regulation in insect models.</p>
+        <p>Following my PhD, I completed a postdoctoral fellowship at the University of Miami, Sylvester Comprehensive Cancer Center, where I expanded my expertise in cancer biology, immuno-oncology, and bioinformatics.</p>
+        <p>My technical competencies include single-cell and bulk RNA sequencing and analysis, flow cytometry, mammalian cell culture, in vivo mouse models, and patient-derived tumor models. I am proficient in computational workflows, differential gene expression analysis, and trajectory inference. I actively contribute to collaborative projects involving data analysis, figure generation, and manuscript development.</p>
+        <p>Outside the lab, I am passionate about science communication, staying current with advances in cancer research and immunology, and mentoring early-career researchers in both experimental and computational aspects of biomedical science.</p>
       </div>
     </div>
   </div>
 
-  <!-- Rest of the sections like publications, services, contact, etc. remain unchanged -->
+  <div class="tab" id="publications">
+    <h2>Research Articles</h2>
+    <ul>
+      <li>Shailesh Singh, Megha Das, Rumela Chakrabarti; Abstract 777: Notch signaling dependent chemoresistance in racial disparity in ER+ breast cancer. <i>Cancer Research</i> 15 March 2024; 84: 777. <a href="https://doi.org/10.1158/1538-7445.AM2024-777" target="_blank">Link</a></li>
+      <li>Megha Das, Samantha Henry, Shailesh Singh, Camila Dos Santos, Rumela Chakrabarti; Abstract 179: Identification of a novel crosstalk between MDSC and NKregs in immunotherapy resistant triple negative breast cancer. <i>Cancer Research</i> 15 March 2024; 84: 179. <a href="https://doi.org/10.1158/1538-7445.AM2024-179" target="_blank">Link</a></li>
+      <li>Singh, S., Anjali, & Singh, A.K. (2022). Impact of environmental stress on biochemical profile and fitness traits in Drosophila malerkotliana. <i>Journal of Scientific Research</i>, 66: 68-76.</li>
+      <li>Singh, S., Yadav, N., & Singh, A.K. (2019). An autosomal recessive eye colour mutant of melon fruit fly, Bactrocera cucurbitae (Coquillett). <i>Proceedings of Zoological Society</i>, 73: 251-254. <a href="https://doi.org/10.1007/s12595-019-00304-7" target="_blank">DOI</a></li>
+      <li>Singh, S., Yadav, N., & Singh, A.K. (2019). Sexually dimorphic morphological traits in Bactrocera cucurbitae. <i>Current Life Sciences</i>, 05: 1-6. <a href="https://doi.org/10.5281/zenodo.2553615" target="_blank">DOI</a></li>
+      <li>Singh, S. & Singh, A.K. (2018). Skewed distribution of melon fruit flies owing to colour preference. <i>Indian Journal of Scientific Research</i>, 08: 1-4.</li>
+      <li>Patel, P., Singh, S., et al. (2020). Feeding attributes in Mexican beetle. <i>Journal of Asia-Pacific Entomology</i>, 23: 310-314. <a href="https://doi.org/10.1016/j.aspen.2020.02.004" target="_blank">Link</a></li>
+      <li>Kumar, S., Singh, A.K., and Singh, S. (2018). Random association in Drosophila ananassae. <i>J. Mol. Cell. Biochem.</i>, 02: 1-6.</li>
+      <li>Kumar, S., Singh, A.K., and Singh, S. (2019). Persistence of heterozygosity in Drosophila. <i>Genomics and Genetics</i>, 12: 11-18. <a href="https://doi.org/10.14456/gag.2019.2" target="_blank">Link</a></li>
+    </ul>
+
+    <h2>Book Chapters</h2>
+    <ul>
+      <li>Singh, S., Bhumika, & Singh, A.K. (2020). Intra-sexual Selection. <i>Encyclopedia of Animal Cognition and Behavior</i>. <a href="https://doi.org/10.1007/978-3-319-47829-6_281-1" target="_blank">DOI</a></li>
+      <li>Singh, S., & Singh, A.K. (2020). Nomenclature. <i>Encyclopedia of Animal Cognition and Behavior</i>. <a href="https://doi.org/10.1007/978-3-319-47829-6_1173-1" target="_blank">DOI</a></li>
+      <li>Bhumika & Singh, S. (2020). Artificial Selection. <i>Encyclopedia of Animal Cognition and Behavior</i>. <a href="https://doi.org/10.1007/978-3-319-47829-6_331-1" target="_blank">DOI</a></li>
+      <li>Das, A., Upadhyay, S., Singh, S., Singh, A.K. (2025). Altruism: Kin. <i>Encyclopedia of Religious Psychology and Behavior</i>. <a href="https://doi.org/10.1007/978-3-031-38971-9_682-1" target="_blank">DOI</a></li>
+      <li>Das, A., Upadhyay, S., Singh, S., Singh, A.K. (2025). Evolution: Costly Rituals. <i>Encyclopedia of Religious Psychology and Behavior</i>. <a href="https://doi.org/10.1007/978-3-031-38971-9_1474-1" target="_blank">DOI</a></li>
+    </ul>
+  </div>
+
+  <div class="tab" id="research">
+    <h2>Research Activity</h2>
+    <p>Under construction.</p>
+  </div>
+
+  <div class="tab" id="services">
+    <h2>Services</h2>
+    <ul>
+      <li>Single-cell RNA-seq analysis</li>
+      <li>Bulk RNA-seq analysis</li>
+    </ul>
+  </div>
+
+  <div class="tab" id="youtube">
+    <h2>YouTube Channel</h2>
+    <p>Coming soon.</p>
+  </div>
+
+  <div class="tab" id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:sshailesh165@gmail.com">sshailesh165@gmail.com</a></p>
+    <p>Email: <a href="mailto:shailesh.singh1@bhu.ac.in">shailesh.singh1@bhu.ac.in</a></p>
+  </div>
 </body>
 </html>
